# EasyAiR_Esp2_V0.9.6

./: CMakeLists.txt  README.md  partitions.csv
_PRESET_SD/: values.txt
_PRESET_SD/updates/: versions.txt
components/CAN_file_transfer/: CAN_file_transfer.c  CMakeLists.txt  README.md
components/CAN_file_transfer/include/: CAN_file_transfer.h
components/CONFIG_FILE/: CMakeLists.txt  CONFIG_FILE.c  README.md
components/CONFIG_FILE/include/: CONFIG_FILE.h
components/ELETTROVALVOLE/: CMakeLists.txt  ELETTROVALVOLE.c  README.md
components/ELETTROVALVOLE/include/: ELETTROVALVOLE.h
components/EMERGENZE/: CMakeLists.txt  EMERGENZE.c  README.md
components/EMERGENZE/include/: EMERGENZE.h
components/MSG_LISTENER/: CMakeLists.txt  MSG_LISTENER.c  README.md  SD_OPERATIONS.c
components/MSG_LISTENER/include/: MSG_LISTENER.h
components/PEDALE/: CMakeLists.txt  PEDALE.c  README.md
components/PEDALE/include/: PEDALE.h
components/PID/: CMakeLists.txt  PID.c  README.md
components/PID/include/: PID.h
components/SD/: CMakeLists.txt  README.md  SD.c
components/SD/include/: SD.h
components/TWAI/: CMakeLists.txt  README.md  TWAI.c
components/TWAI/include/: TWAI.h  TWAI_DEFINE.h
components/Updater/: CMakeLists.txt  README.md  Updater.c
components/Updater/include/: Updater.h
main/: CMakeLists.txt  TWAI_SELF_TEST.c  VARIABLES_INIT.c  main.c
